# F2Dock

./: .gitignore  CMakeLists.txt  OVERVIEW.md  README.md
.github/workflows/: ci.yml  release.yml
inc/F2DockServer/: dockingJobParams.h  jobHandler.h  scriptHandler.h
inc/PG-range/: 1D-IntegerRange.h  BinarySearchTree.h  PG.h  ball.h  cell.h  cuckoo.h  grid.h  line.h  miscellaneous.h
inc/XmlRPC/: base64.h
inc/f2dock/: ElementInformation.h  Version.h.in
inc/fast-GB/: SSEApproxMath.h  fastBornRadius.h  fastGpol.h
inc/fast-clash/: clashFilter.h
inc/fast-resCont/: resContFilter.h
inc/fft-utils/: sparsefft3-timers.h
inc/hbondFilter/: hbondFilter.h
inc/utils/: utils.h
src/: CMakeLists.txt
src/F2DockServer/: CMakeLists.txt
src/GB-rerank/: CMakeLists.txt  GB-rerank.cpp
src/PG-range/: CMakeLists.txt  PG.cc  cuckoo.cc
src/PostFiltering/: CMakeLists.txt  FilterOutput.cpp
src/XmlRPC/: CMakeLists.txt
src/f2dock/: CMakeLists.txt  Docking.cpp  F2Dock.cpp
src/fast-GB/: CMakeLists.txt  GpolTest.cpp  SSEApproxMath.cpp  fastBornRadius.cpp  fastDispE.cpp  fastGpol.cpp
src/fast-LJ/: CMakeLists.txt  fastLJ.cpp
src/fast-PQ/: CMakeLists.txt
src/fast-clash/: CMakeLists.txt  clashFilter.cpp
src/fast-hydro/: CMakeLists.txt  pseudoGsol.cpp  testPseudoGsol.cpp
src/fast-resCont/: CMakeLists.txt  resContFilter.cpp
src/fft-utils/: CMakeLists.txt
src/hbondFilter/: CMakeLists.txt
src/libmol/: CMakeLists.txt
src/math/: CMakeLists.txt
src/misc-ident/: CMakeLists.txt  miscIdent.cpp
src/utils/: CMakeLists.txt  utils.cpp
src/vol/: CMakeLists.txt  RAWIV.cpp
tests/: 1A2K.inp  1A2K_apereira.inp  1ACB.inp  1AHW.inp  1JZD.inp
tests/unit/: CMakeLists.txt  test_clash_filter.cpp  test_file_formats.cpp  test_math.cpp  test_pairing_heap.cpp  test_pg_range.cpp  test_value_position.cpp
